Dates on fixtures now left aligned

--- a/common/app/assets/stylesheets/module/football/_matches.scss
+++ b/common/app/assets/stylesheets/module/football/_matches.scss
@@ -16,6 +16,10 @@
         color: $c-neutral1;
         text-decoration: none;
     }
+
+    tr:hover {
+        background-color: darken($c-neutral8, 4%);
+    }
 }
 
 .football-match--live {
